--- a/README
+++ b/README
@@ -1,3 +1,2 @@
 The makefile can install the riscv32-gnu-toolchain in /opt/riscv and qemu-system-riscv32 and qemu-riscv32.
-Now we can run hello in riscv user mode.
-But there are some errors in make vmlinux.
+Step 2 will make the vmlinux, I have modified it and it can run correctly.
